[package]
name = "axum-crud-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43", features = ["full"] }
tower-http = { version = "0.6.2", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1.2"
mime = "0.3"
serde_json = "1.0"
tower = { version = "0.5", features = ["util"] }
